# Isocompy

./: .gitignore  .readthedocs.yaml  README.md
code/: .gitignore  Isocompy.py  Isocompy_Salar_de_Atacama.ipynb  README.md  Untitled.ipynb  Untitled1.ipynb  data_prep.py  dec_2020_nb.py  fist.py  gen_traj_prediction.py  indipendent_model.py  internal_dill_dump.pkl  internal_dill_dump_iso_18_2h_model_done.pkl  internal_dill_dump_iso_18_2h_model_done_all_year.pkl  internal_dill_dump_iso_18_2h_model_done_just_summer.pkl  iso_run.py  meteo_iso_functions.py  meteo_workspace.code-workspace  model_fitting.py  pyproject.toml  pysplit_funcs_for_meteo_model.py  sqmrain.py  test.py
code/for_sonia_to_run/: 1_2_3_12.py  6_7_8.py  all_year.py  ind_month.py
code/isocompy/: .gitignore  __init__.py  change_meteo_file_names.py  create_maps.py  cv_uncertainty.py  data_prep.py  data_preparation.py  feature_select.py  isocompy_tool_funcs.py  model_fitting.py  reg_model.py  requirements.txt  tools.py
code/pkls/: dill_dump_adjusted_r_fixed_3_september.pk1
inputs/: .gitignore  METEO_CHILE_2.xlsx  Rain_Snow_01_08_2019.xlsx  new_measured.xlsx  nuevos.xlsx  x_y_z.xls  x_y_z_csvtest.csv
output/: f_reg_mutual_output_annual.txt  iso_model_outputs_3_sep.txt  iso_model_outputs_5_sep.txt  iso_model_outputs_6_sep.txt  isotope_main_data_predictions.xlsx  models_output.txt  predicted_results.xls
output_backup_3_sep_dill_problem/: f_reg_mutual_output_annual.txt
output_before new coords/: iso_model_outputs_4_sep.txt  predicted_results.xlsx
test_output/: isotope_modeling_output_report_18_2h_3h.txt  (+3 more)
(+163 files in other folders)
